<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_card_detail"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        >
        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/first_name"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            android:inputType="text" />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        >
        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="0.5"
            android:hint="@string/last_name"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        >
        <EditText
            android:id="@+id/cardnum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/card_number"
            android:inputType="number"
            android:background="@null"
            tools:ignore="Autofill" />

    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/cardtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        android:text=""
        android:textStyle="bold"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/expiry_date"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@null"
                android:layout_weight="0.7"
                tools:ignore="Autofill" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/date_btn"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_baseline_calendar_today_24"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        >
        <EditText
            android:id="@+id/cvv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="0.5"
            android:inputType="number"
            android:hint="@string/cvv"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            />

    </com.google.android.material.card.MaterialCardView>
    <Button
        android:id="@+id/pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_now"
        android:layout_margin="@dimen/_10sdp"
        />
</LinearLayout>